force-app/main/default/objects/Investment_Area__c/Investment_Area__c.object-meta.xml
<CustomObject>
    <label>Investment Area</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investment Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>