force-app/main/default/objects/Investment_Area__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <label>Approved</label>
    <summarizedField>Initiative__c.Planned__c</summarizedField>
    <summaryFilterItems>
        <field>Initiative__c.Approved__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Initiative__c.Investment_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>