force-app/main/default/objects/Investment_Area__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <inlineHelpText>Funding allocated from the Strategic Area to this Investment Area.</inlineHelpText>
    <label>Investment Area Allocation</label>
    <summarizedField>Investment_Area_Allocation__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Investment_Area_Allocation__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Investment_Area_Allocation__c.Investment_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>