force-app/main/default/objects/Investment_Area__c/fields/Committed__c.field-meta.xml
<CustomField>
    <fullName>Committed__c</fullName>
    <description>Calculated as sum of payments associated with Initiatives in this Investment Area, where Initiative status is Scheduled, Approved, or Closed or Variation. (Note that Scheduled status is used May-July 2015 only, and should cease to be relevant once those initiatives have been updated.)</description>
    <inlineHelpText>Sum of Planned Amounts on Initiatives in this Investment Area, where the Initiatives are in Approved, Signed or Being Varied Investment Schedules.</inlineHelpText>
    <label>Approved Investments</label>
    <summarizedField>Initiative__c.Planned__c</summarizedField>
    <summaryFilterItems>
        <field>Initiative__c.Status_Text__c</field>
        <operation>contains</operation>
        <value>Scheduled,Closed,Approved,Variation</value>
    </summaryFilterItems>
    <summaryForeignKey>Initiative__c.Investment_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>