force-app/main/default/objects/Investment_Area__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <label>Criteria</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>