force-app/main/default/objects/Investment_Area__c/fields/Draft__c.field-meta.xml
<CustomField>
    <fullName>Draft__c</fullName>
    <inlineHelpText>Payments with a status &apos;Draft&apos;</inlineHelpText>
    <label>Draft</label>
    <summarizedField>Initiative__c.Draft__c</summarizedField>
    <summaryForeignKey>Initiative__c.Investment_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>