force-app/main/default/objects/Investment_Area__c/fields/Draft_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Draft_Initiatives__c</fullName>
    <description>sum of planned amounts for all initiatives associated with this investment area, where initiative status is Draft</description>
    <inlineHelpText>Planned amounts on draft initiatives</inlineHelpText>
    <label>Draft Initiatives</label>
    <summarizedField>Initiative__c.Planned__c</summarizedField>
    <summaryFilterItems>
        <field>Initiative__c.Status_Text__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </summaryFilterItems>
    <summaryForeignKey>Initiative__c.Investment_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>