force-app/main/default/objects/Investment_Area__c/fields/Incomplete_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Initiatives__c</fullName>
    <inlineHelpText>Initiatives related to this Investment Area, with status other than Closed or Cancelled.</inlineHelpText>
    <label>Incomplete Initiatives</label>
    <summaryFilterItems>
        <field>Initiative__c.Status_Text__c</field>
        <operation>notEqual</operation>
        <value>Closed, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Initiative__c.Investment_Area__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>