force-app/main/default/objects/Investment_Area__c/fields/Incomplete_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Requirements__c</fullName>
    <description>Used to feed the incomplete requirements calculation on the strategic area</description>
    <inlineHelpText>Requirements related to this Investment Area with status of &apos;Pending&apos; or &apos;Overdue&apos;</inlineHelpText>
    <label>Incomplete Requirements</label>
    <summarizedField>Initiative__c.Incomplete_Requirements__c</summarizedField>
    <summaryForeignKey>Initiative__c.Investment_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>