force-app/main/default/objects/Investment_Area__c/fields/Investment_Area_Owner__c.field-meta.xml
<CustomField>
    <fullName>Investment_Area_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Area Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Investment_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>