force-app/main/default/objects/Investment_Area__c/fields/Not_Yet_Committed__c.field-meta.xml
<CustomField>
    <fullName>Not_Yet_Committed__c</fullName>
    <formula>Budget__c - Committed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Investment Area Allocation less Approved Investments.</inlineHelpText>
    <label>Not Yet Committed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>