force-app/main/default/objects/Investment_Area__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <inlineHelpText>Payments with a status of &apos;Paid&apos; or &apos;Processed&apos;</inlineHelpText>
    <label>Paid</label>
    <summarizedField>Initiative__c.Paid__c</summarizedField>
    <summaryForeignKey>Initiative__c.Investment_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>