force-app/main/default/objects/Investment_Area__c/fields/Pending_Approval__c.field-meta.xml
<CustomField>
    <fullName>Pending_Approval__c</fullName>
    <description>sum of planned amounts for all initiatives associated with this investment area, where initiative status is Pending Approval</description>
    <inlineHelpText>Planned amounts on initiatives in investment schedules that are Pending Approval.</inlineHelpText>
    <label>Initiatives Pending Approval</label>
    <summarizedField>Initiative__c.Planned__c</summarizedField>
    <summaryFilterItems>
        <field>Initiative__c.Status_Text__c</field>
        <operation>contains</operation>
        <value>Pending Approval,Pending Investment Schedule Approval</value>
    </summaryFilterItems>
    <summaryForeignKey>Initiative__c.Investment_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>