force-app/main/default/objects/Investment_Area__c/fields/Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled__c</fullName>
    <inlineHelpText>Payments with status of &apos;Scheduled&apos;, &apos;Sent for Payment&apos;, &apos;On Hold&apos; or &apos;Error&apos;</inlineHelpText>
    <label>Scheduled</label>
    <summarizedField>Initiative__c.Scheduled__c</summarizedField>
    <summaryForeignKey>Initiative__c.Investment_Area__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>