force-app/main/default/objects/Investment_Area__c/fields/Strategic_Area__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Area__c</fullName>
    <label>Strategic Area</label>
    <referenceTo>Strategic_Area__c</referenceTo>
    <relationshipLabel>Investment Areas</relationshipLabel>
    <relationshipName>Investment_Areas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>