force-app/main/default/objects/Investment_Area__c/fields/Strategic_Area_Owner__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Area_Owner__c</fullName>
    <formula>Strategic_Area__r.Owner:User.FirstName &amp; &quot; &quot; &amp;  Strategic_Area__r.Owner:User.LastName</formula>
    <label>Strategic Area Owner</label>
    <type>Text</type>
</CustomField>