force-app/main/default/objects/Investment_Area__c/recordTypes/Contestable_Investment.recordType-meta.xml
<RecordType>
    <fullName>Contestable_Investment</fullName>
    <active>true</active>
    <description>For investment areas that determine spend based on a selection process. As such, this investment area type allows you to view all the application rounds associated with it.</description>
    <label>Contestable Investment</label>
</RecordType>