force-app/main/default/objects/Investment_Area__c/recordTypes/Standard_Investment.recordType-meta.xml
<RecordType>
    <fullName>Standard_Investment</fullName>
    <active>true</active>
    <description>For investment areas that determine spend based on planning and partnership</description>
    <label>Standard Investment</label>
</RecordType>