force-app/main/default/objects/Investment_Area__c/validationRules/Strategic_area_status_closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Strategic_area_status_closed</fullName>
    <active>true</active>
    <description>This formula will restrict to create Investment area when strategic area status is closed.</description>
    <errorConditionFormula>IF(ISPICKVAL(Strategic_Area__r.Status__c,&quot;Closed&quot;)&amp;&amp; ISNEW(), true, false)</errorConditionFormula>
    <errorMessage>An Investment Area can&apos;t be added to a closed Strategic Area.</errorMessage>
</ValidationRule>