force-app/main/default/objects/Investment_Area__c/listViews/Active_Corporate_Services_InvestmentArea.listView-meta.xml
<ListView>
    <fullName>Active_Corporate_Services_InvestmentArea</fullName>
    <columns>NAME</columns>
    <columns>Budget__c</columns>
    <columns>Available__c</columns>
    <columns>Scheduled__c</columns>
    <columns>Paid__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Strategic_Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Strategic_Area__c</field>
        <operation>contains</operation>
        <value>Corporate</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Corporate Services InvestmentArea</label>
</ListView>