force-app/main/default/objects/Investment_Area__c/listViews/Active_SectorCapability_Investment_Areas.listView-meta.xml
<ListView>
    <fullName>Active_SectorCapability_Investment_Areas</fullName>
    <columns>NAME</columns>
    <columns>Budget__c</columns>
    <columns>Available__c</columns>
    <columns>Approved__c</columns>
    <columns>Paid__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Strategic_Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Strategic_Area__c</field>
        <operation>contains</operation>
        <value>Sector Capability</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active SectorCapability Investment Areas</label>
</ListView>