force-app/main/default/objects/Investment_Area__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Investment_Area_Owner__c</columns>
    <columns>Strategic_Area__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Budget__c</columns>
    <columns>Available__c</columns>
    <columns>Approved__c</columns>
    <columns>Scheduled__c</columns>
    <columns>Paid__c</columns>
    <columns>Refunded__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Investment Areas</label>
</ListView>