force-app/main/default/objects/Investment_Area__c/listViews/Draft_Investment_Areas.listView-meta.xml
<ListView>
    <fullName>Draft_Investment_Areas</fullName>
    <columns>NAME</columns>
    <columns>Budget__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Strategic_Area__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Investment_Area_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft Investment Areas</label>
</ListView>