force-app/main/default/objects/Investment_Area__c/listViews/My_Investment_Areas.listView-meta.xml
<ListView>
    <fullName>My_Investment_Areas</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Budget__c</columns>
    <columns>Approved__c</columns>
    <columns>Scheduled__c</columns>
    <columns>Paid__c</columns>
    <columns>Refunded__c</columns>
    <columns>Available__c</columns>
    <columns>Status__c</columns>
    <columns>Investment_Area_Owner__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Investment Areas</label>
</ListView>